correction tests boutons creer lieux alignés modif bouton planifier dans modif sortie footer

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -77,12 +77,14 @@ main {
   padding-right: 60px;
   padding-bottom: 60px;
 }
+//bandeau header
 .bandeauBonjour{
-  background-color: $light-pink;
+  //background-color: $light-pink;
+  background-color: $pink-shadow;
   //width: 30vw;
   width: 300px;
   height: 10%;
-  color: white;
+  color: black;
   padding-left: 5px;
   margin-left: 3px;
 }
@@ -97,7 +99,9 @@ main {
 }
 footer {
   padding: 60px;
-  background-color: #bddee8;
+  background-color: $pink-shadow;
+  height: 20%;
+  color: black;
 }
 button {
   position: relative;
@@ -290,7 +294,9 @@ td, th{
   text-align: left;
 }
 //page de création d'un lieu
-
+.btnCreerLieu{
+  margin-top: 5%;
+}
 ///* Cool infinite background scrolling animation.
 // * Twitter: @kootoopas
 // */
